# zecchin_archaeo-extraction-prompt-eval

./: .gitignore  README.md
pdf_to_text/: .gitignore  Dockerfile  README.md  (+3 more)
prompt_enhancing/: .env.example  .gitignore  README.md  config.py  environment.yml  justfile  mkdocs.yml  pyproject.toml  ressources.md
prompt_enhancing/docs/: about.md  explanation.md  how-to-guides.md  index.md  install.md  reference.md
prompt_enhancing/docs/refs/: dataset.md  thesauri.md
prompt_enhancing/models/: README.md
prompt_enhancing/models/custom-remote-models/: .gitignore  README.md  config.py  custom-remote-models.ini  extensions.py  justfile  requirements.txt
prompt_enhancing/models/custom-remote-models/src/magoh_ai_sup_server/: inference.py  server.py
prompt_enhancing/models/custom-remote-models/templates/: base.html
prompt_enhancing/models/ollama-models/: .env.example  README.md  justfile
prompt_enhancing/models/vllm-models/: .env.example  README.md  justfile
prompt_enhancing/notebooks/: 2.0-Convolutio-EvalLegacyExtended.ipynb  ChunkSelection.ipynb  CompletePipelineTest.ipynb  Evaluation-NumericPDFs.ipynb  Evaluation.ipynb  FileBrowser.ipynb  NormalizeInterventionDate.ipynb  Presentation.ipynb  README.md  SampleGoodPdfs.ipynb  Untitled.ipynb  VisualizeResults.ipynb  get_data_schema.ipynb  results.csv
prompt_enhancing/notebooks/exploratory/: 1.0-Convolutio-OCR-VLLM.ipynb  1.1-Convolutio-Docling-Preprocessing.ipynb  1.2-Convolutio-VLLM-Preprocessing.ipynb  2.0-Convolutio-embeding-similarity.ipynb  2.1-Convolutio-entity-match-selection.ipynb  3.0-Convolutio-complete_pipeline.ipynb  3.1-Convolutio-complete_pipeline_with_legacy.ipynb  3.1-Convolutio-legacy_field_extraction.ipynb  4.0-prepare-scans.ipynb  4.1-complete_pipeline.ipynb
prompt_enhancing/references/: field_spec.md  inference_graph.dot
prompt_enhancing/references/knowledge/: duration.md  fonte_informazione.md  funzionario_competente.md  interv_start_date.md
prompt_enhancing/reports/: exp_protocol.md
prompt_enhancing/sql/: sample_findings.sql  sampling.sql
prompt_enhancing/src/: try_dataload.py
prompt_enhancing/src/archaeo_super_prompt/: cache.py  debug_log.py  language_model.py  magoh_target.py  main.py  main_transformer.py  open_with_ocr.py  output.py  signature.py  target_types.py  utils.py
prompt_enhancing/src/archaeo_super_prompt/config/: __init__.py  debug_log.py  env.py
prompt_enhancing/src/archaeo_super_prompt/dataset/: __init__.py  load.py  minio_engine.py  postgresql_engine.py  thesaurus.py
prompt_enhancing/src/archaeo_super_prompt/dataset/normalization/: __init__.py
prompt_enhancing/src/archaeo_super_prompt/dataset/sql/: sampling.sql  sampling_on_recents.sql  select_findings_ids.sql  select_ids.sql  setseed.sql
prompt_enhancing/src/archaeo_super_prompt/dataset/thesauri/: __init__.py  comune_province.py
prompt_enhancing/src/archaeo_super_prompt/evaluation/: compare.py  display_fields.py  evaluate.py  load_examples.py  similarity_match.py  smart_match_checking.py
prompt_enhancing/src/archaeo_super_prompt/inspection/: cost.py
prompt_enhancing/src/archaeo_super_prompt/modeling/: DAG_builder.py  __init__.py  chunk_selector.py  legacy_predict.py  predict.py  similarity.py  train.py
prompt_enhancing/src/archaeo_super_prompt/modeling/categories/: category.py
prompt_enhancing/src/archaeo_super_prompt/modeling/entity_extractor/: __init__.py  fuzzy_match.py  model.py  ne_selector.py  ner_transformer.py  types.py
prompt_enhancing/src/archaeo_super_prompt/modeling/pdf_to_text/: __init__.py  cache_docling_documents.py  chunking.py  document_division.py  stream_ocr.py  stream_ocr_manual.py  types.py
prompt_enhancing/src/archaeo_super_prompt/modeling/struct_extract/: chunks_to_text.py  extractor_module.py  field_extractor.py  language_model.py  main_transformer.py  types.py
prompt_enhancing/src/archaeo_super_prompt/modeling/types/: base_transformer.py  detailed_evaluator.py
prompt_enhancing/src/archaeo_super_prompt/models/: main_pipeline.py  predict.py  similarity.py
prompt_enhancing/src/archaeo_super_prompt/pdf_to_text/: __init__.py  add_ocr.py  chunking.py  extract_text.py  justfile  ocrmypdf.Dockerfile  smart_reading.py  stream_ocr.py  types.py
prompt_enhancing/src/archaeo_super_prompt/signature/: arch_extract_type.py  date_estimation.py  document_type.py  intervention_type.py  name.py  ogd.py
prompt_enhancing/src/archaeo_super_prompt/signatures/: arch_dictionnaries.py  arch_extract_type.py  date_estimation.py  document_type.py  input.py  name.py  ogd.py
prompt_enhancing/src/archaeo_super_prompt/types/: embedding_labeled_chunks.py  featured_chunks.py  intervention_id.py  ner_labeled_chunks.py  pdfchunks.py  pdfpaths.py  per_intervention_feature.py  results.py  structured_data.py  target_types.py  thesaurus.py
prompt_enhancing/src/archaeo_super_prompt/utils/: cache.py  norm.py  result.py
prompt_enhancing/src/archaeo_super_prompt/visualization/: __init__.py  display_fields.py  entities.py  file_explorer.py  mlflow_logging.py  prettify_field_names.py  types.py
prompt_enhancing/tests/: magoh_transform.py  ocr_test.py  test_batch_cache.py  test_date_normalization.py  test_extractor_type_bijection.py  test_fuzzy_matching.py  test_ner_selector.py  test_page_range_division.py
(+38 files in other folders)
