[project]
name = "archaeo-super-prompt"
version = "0.1.0"
description = "DSPy pipeline to generate several optimized prompt lists for extracting structured information on archaeological legacy raw documents"
authors = [
    {name = "Convolutio",email = "79534557+Convolutio@users.noreply.github.com"}
]
license = {text = "UNLICENSED"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dspy (>=2.6.24,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bidict (>=0.23.1,<0.24.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "pymupdf (>=1.26.0,<2.0.0)",
    "pymupdf4llm (>=0.0.24,<0.0.25)",
    "pandas-stubs (>=2.2.3.250527,<3.0.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pdftotext (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
]

[project.scripts]
main = "archaeo_super_prompt.main:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ipython = "^9.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
