[project]
name = "archaeo-super-prompt"
version = "0.1.0"
description = "DSPy pipeline to generate several optimized prompt lists for extracting structured information on archaeological legacy raw documents"
authors = [
    {name = "Convolutio",email = "79534557+Convolutio@users.noreply.github.com"}
]
license = {text = "UNLICENSED"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dspy (>=2.6.24,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)", # TODO: remove
    "dotenv (>=0.9.9,<0.10.0)",
    "bidict (>=0.23.1,<0.24.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "pymupdf (>=1.26.0,<2.0.0)", # TODO: remove
    "pymupdf4llm (>=0.0.24,<0.0.25)", # TODO: remove
    "pandas-stubs (>=2.2.3.250527,<3.0.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pdftotext (>=3.0.0,<4.0.0)", # TODO: remove
    "scikit-learn (>=1.7.0,<2.0.0)",
    "llmsherpa (>=0.1.4,<0.2.0)", # TODO: remove after replacement by docling
    "tqdm (>=4.67.1,<5.0.0)",
    "pandera[mypy] (>=0.24.0,<0.25.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "ollama-ocr (>=0.1.6,<0.2.0)", # TODO: remove
    "docling (>=2.39.0,<3.0.0)",
]

[project.scripts]
main = "archaeo_super_prompt.main:main"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
nbstripout = "^0.8.1"
pyyaml = "^6.0.2"
black = "^25.1.0"
frictionless = "^5.18.1"
nest-asyncio = "^1.6.0"


[[tool.poetry.source]]
name = "torch-cpu-only"
url = "https://download.pytorch.org/whl"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "torch-cpu-only"}
torchvision = {source="torch-cpu-only"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
